refined comments